name:                ToyRob
version:             0.1.0.0
synopsis:            Toy Robot challenge in Haskell
description:         Please see README.md
homepage:            https://github.com/supermario/haskell-toyrob
license:             BSD3
license-file:        LICENSE
author:              Mario Rogic
maintainer:          hello@mario.net.au
copyright:           2015 Mario Rogic
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable ToyRob
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, lens, transformers
